--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy</h1>
+        <h1>Privacy Policys</h1>
         <p>Last updated: August 26, 2024</p>
 
         <p>Welcome to Inspire Breeze! This privacy policy outlines how we collect, use, and protect your information when you use our app. By using Inspire Breeze, you agree to the collection and use of information in accordance with this policy.</p>
