all pages has been updated

--- a/terms.html
+++ b/terms.html
@@ -3,81 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions - Inspire Breeze</title>
+    <title>Terms & Conditions</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
-            background-color: #005C6A;
-            color: #fff;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 0 20; /* Apply 10dp padding to left and right */
             color: #333;
         }
-        h1 {
-            color: #4CAF50;
-            text-align: center;
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        h2 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-        p {
-            margin-bottom: 20px;
-        }
-        ul {
-            margin-bottom: 20px;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+        h1, h2, h3 {
+            color: #005C6A;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div>
         <h1>Terms & Conditions</h1>
-        <p>Last updated: August 26, 2024</p>
+        <p>Welcome to Inspire Breeze. By using our app, you agree to the following terms and conditions:</p>
 
-        <p>Welcome to Inspire Breeze. By using our app, you agree to comply with and be bound by the following terms and conditions. Please read them carefully before using our app.</p>
+        <h2>1. Use of the App</h2>
+        <p>Inspire Breeze allows you to access motivational quotes, save favorites, and share them. You may also create and share your own quotes.</p>
 
-        <h2>1. Acceptance of Terms</h2>
-        <p>By accessing or using the Inspire Breeze app, you agree to be bound by these terms and conditions, as well as our privacy policy. If you do not agree with any part of these terms, you may not use the app.</p>
+        <h2>2. User Responsibilities</h2>
+        <p>Users are responsible for the content they create and share within the app. Please ensure that your content is respectful and does not violate any laws or rights of others.</p>
 
-        <h2>2. Use of the App</h2>
-        <p>You agree to use the app only for lawful purposes and in a way that does not infringe on the rights of others or restrict or inhibit anyone else's use and enjoyment of the app. Prohibited behavior includes harassing or causing distress or inconvenience to any other user, transmitting obscene or offensive content, or disrupting the normal flow of dialogue within the app.</p>
+        <h2>3. Account Security</h2>
+        <p>You are responsible for maintaining the security of your account and for any activities that occur under your account.</p>
 
-        <h2>3. User Content</h2>
-        <p>By submitting content to Inspire Breeze, including quotes, you grant us a worldwide, non-exclusive, royalty-free, transferable license to use, reproduce, distribute, prepare derivative works of, display, and perform that content in connection with the app and our business.</p>
-
-        <h2>4. Termination</h2>
-        <p>We reserve the right to terminate or suspend your access to the app without prior notice or liability, for any reason, including but not limited to your breach of these terms and conditions.</p>
+        <h2>4. Modifications to the App</h2>
+        <p>We may update the app from time to time to improve functionality, add new features, or fix bugs. We reserve the right to modify or discontinue the app at any time.</p>
 
         <h2>5. Limitation of Liability</h2>
-        <p>Inspire Breeze is provided on an "as is" and "as available" basis. We make no warranties, expressed or implied, and hereby disclaim and negate all other warranties. In no event shall Inspire Breeze or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the app.</p>
+        <p>Inspire Breeze is provided "as is" without warranties of any kind. We are not liable for any damages or losses resulting from the use of the app.</p>
 
-        <h2>6. Governing Law</h2>
-        <p>These terms and conditions are governed by and construed in accordance with the laws of your country, and you irrevocably submit to the exclusive jurisdiction of the courts in that state or location.</p>
-
-        <h2>7. Changes to Terms</h2>
-        <p>We reserve the right to modify or replace these terms at any time. Your continued use of the app after any such changes constitutes your acceptance of the new terms.</p>
+        <h2>6. Changes to These Terms</h2>
+        <p>We may update these terms from time to time. Any changes will be posted on this page, and your continued use of the app constitutes acceptance of the updated terms.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions about these terms and conditions, please contact us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
+        <p>If you have any questions about these terms, please contact us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
     </div>
 </body>
 </html>
