--- a/about_us.html
+++ b/about_us.html
@@ -3,60 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Inspire Breeze</title>
+    <title>About Us</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
-            background-color: #005C6A;
-            color: #fff;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 0 20px; /* Apply 10dp padding to left and right */
             color: #333;
         }
-        h1 {
-            color: #4CAF50;
-            text-align: center;
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        h2 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-        p {
-            margin-bottom: 20px;
+        h1, h2, h3 {
+            color: #005C6A;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>About Us</h1>
-        <p>Welcome to Inspire Breeze, your daily source of motivation and positivity! At Inspire Breeze, we believe in the power of words to uplift, inspire, and drive positive change in our lives.</p>
+    <div>
+        <h1>About Inspire Breeze</h1>
+        <p>Inspire Breeze is your daily source of motivation and positivity. We provide a platform where users can find and share quotes that inspire them.</p>
 
         <h2>Our Mission</h2>
-        <p>Our mission is simple: to inspire and motivate individuals every day by providing a platform where users can discover, share, and create powerful quotes that resonate with their life experiences. We aim to be a beacon of positivity in an increasingly complex world.</p>
+        <p>Our mission is to uplift and motivate individuals through the power of words. Whether you need a daily dose of inspiration or want to share your own wisdom, Inspire Breeze is here for you.</p>
 
-        <h2>What We Offer</h2>
-        <p>Inspire Breeze offers a diverse collection of motivational quotes across various categories, including success, love, positivity, and productivity. Our users can also contribute by adding their own quotes, making the platform a collaborative space for shared inspiration.</p>
+        <h2>Features</h2>
+        <ul>
+            <li>Daily motivational quotes</li>
+            <li>Categories for different types of quotes</li>
+            <li>Save and share your favorite quotes</li>
+            <li>Create and share your own quotes</li>
+            <li>Customizable backgrounds and themes</li>
+        </ul>
 
-        <h2>Join Our Community</h2>
-        <p>We invite you to join our growing community of motivated individuals. Whether you're here to find inspiration or to inspire others, Inspire Breeze is the perfect place to start your day with a positive mindset.</p>
+        <h2>Join Us</h2>
+        <p>Be part of a community that values positivity and growth. Download Inspire Breeze today and start your journey toward a more inspired life.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions, feedback, or suggestions, feel free to reach out to us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>. We'd love to hear from you!</p>
-
-        <p>Thank you for being a part of Inspire Breeze.</p>
+        <p>We’d love to hear from you! If you have any questions or feedback, feel free to reach out at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
     </div>
 </body>
 </html>
-    
