--- a/privacy.html
+++ b/privacy.html
@@ -3,87 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Inspire Breeze</title>
+    <title>Privacy Policy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
-            background-color: #005C6A;
-            color: #fff;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 0 20px; /* Apply 10dp padding to left and right */
             color: #333;
         }
-        h1 {
-            color: #4CAF50;
-            text-align: center;
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-        h2 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-        p {
-            margin-bottom: 20px;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+        h1, h2, h3 {
+            color: #005C6A;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Privacy Policys</h1>
-        <p>Last updated: August 26, 2024</p>
+    <div>
+        <h1>Privacy Policy</h1>
+        <p>Welcome to Inspire Breeze. This Privacy Policy explains how we collect, use, and protect your information when you use our app.</p>
 
-        <p>Welcome to Inspire Breeze! This privacy policy outlines how we collect, use, and protect your information when you use our app. By using Inspire Breeze, you agree to the collection and use of information in accordance with this policy.</p>
+        <h2>1. Information We Collect</h2>
+        <p>We collect information that you provide to us directly, such as when you create an account, add a quote, or contact us for support.</p>
 
-        <h2>Information We Collect</h2>
-        <p>We collect information to provide better services to all our users. This includes:</p>
-        <ul>
-            <li><strong>Personal Information:</strong> When you sign in using Google, we collect your name, email address, and profile picture.</li>
-            <li><strong>Quotes:</strong> Any quotes you add to the app are stored on our servers.</li>
-            <li><strong>Usage Data:</strong> We may collect information about how you use the app, including the features you interact with and the time spent on the app.</li>
-        </ul>
+        <h2>2. How We Use Your Information</h2>
+        <p>We use your information to operate, maintain, and improve our app, as well as to communicate with you and to personalize your experience.</p>
 
-        <h2>How We Use Your Information</h2>
-        <p>Your information is used to provide, maintain, and improve our services, including:</p>
-        <ul>
-            <li>Displaying your added quotes within the app.</li>
-            <li>Personalizing your experience based on your activity and preferences.</li>
-            <li>Providing customer support if needed.</li>
-        </ul>
+        <h2>3. Sharing Your Information</h2>
+        <p>We do not share your personal information with third parties except as necessary to provide our services, comply with the law, or protect our rights.</p>
 
-        <h2>Sharing Your Information</h2>
-        <p>We do not share your personal information with third parties, except as necessary to operate our app or as required by law. We may share non-personally identifiable information, such as aggregated data, for analytical purposes.</p>
+        <h2>4. Security</h2>
+        <p>We take reasonable measures to protect your information from unauthorized access or disclosure.</p>
 
-        <h2>Data Security</h2>
-        <p>We are committed to ensuring the security of your information. We implement appropriate technical and organizational measures to protect your data from unauthorized access, alteration, or destruction.</p>
-
-        <h2>Your Rights</h2>
-        <p>You have the right to access, update, or delete your personal information at any time. If you wish to exercise these rights, please contact us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
-
-        <h2>Changes to This Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page. We encourage you to review this policy periodically for any updates.</p>
+        <h2>5. Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
         <h2>Contact Us</h2>
-        <p>If you have any questions about this privacy policy, please contact us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
-
-        <p>Thank you for using Inspire Breeze!</p>
+        <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@inspirebreeze.com">support@inspirebreeze.com</a>.</p>
     </div>
 </body>
 </html>
