--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,8 @@
             line-height: 1.6;
             margin: 0;
             padding: opx;
-          
+           
+            padding: 10px;
             color: #fff;
         }
         .container {
