--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0px;
-            
+            padding: 10px;
             color: #fff;
         }
         .container {
